Sign out link - prevent wrapping

--- a/web/src/main/resources/scss/modules/_header.scss
+++ b/web/src/main/resources/scss/modules/_header.scss
@@ -78,7 +78,7 @@ header {
     margin: 0;
     padding: 0;
     position: absolute;
-    text-align: right;
+    min-width: 100px;
     width: 100%;
   }
 
